# motac

./: .gitignore  .pre-commit-config.yaml  README.html  README.md  ROADMAP.html  ROADMAP_REBUILD.md  STATUS.html  WORKLOG.html  architecture.html  contributing.html  genindex.html  index.html  installation.html  milestones_v2.md  mypy.ini  objects.inv  paper_artefacts.html  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  spec_alignment.html  spec_review_vs_pdf.md
.openclaw/: status.json
_modules/: index.html
_sources/: WORKLOG.md.txt  architecture.md.txt  installation.md.txt  paper_artefacts.md.txt
agent/: CHANGELOG_AGENT.html  DECISIONS.html  KNOWN_ISSUES.html  MILESTONES_M0_M1.html  NEXT_TASKS.html  PROJECT_STATE.html  RUNBOOK.html  SCOPE.html  TRACE.html
api/: cli.html  eval.html  model.html  neural_kernels.html  schema.html  sim.html  substrate.html
configs/: example.yaml
docs/: Makefile  README.md  ROADMAP.md  STATUS.md  WORKLOG.md  architecture.md  conf.py  contributing.md  index.md  paper_artefacts.md  references.bib  spec_alignment.md
legacy/: ROADMAP_pre-reset_20260213T145215Z.html
loaders/: acled.html  chicago.html  index.html
model/: 00_overview.html  01_parameter_recovery.html
paper/: README.md
scripts/: check_github_ci.py
tests/: test_acled_loader_m6.py  test_backtest_helper_m5.py  test_chicago_loader_m5.py  test_cli.py  test_cli_acled_load_m7.py  test_cli_chicago_load_m6.py  test_cli_import_path_m4.py  test_cli_json_schema_m18.py  test_cli_paper_generate_artifacts_m11.py  test_cli_spatial_cell_id_smoke_m15.py  test_cli_substrate_cache_smoke_m10.py  test_complete_data_exact_obs_fit_m11.py  test_configs_import_m4.py  test_end_to_end_toy_m5.py  test_eval_import_m4.py  test_eval_m4.py  test_exact_observed_loglik_m8.py  test_exact_vs_approx_observed_loglik_m9.py  test_fit_kernel_fn_m16.py  test_forecast_metrics_m4.py  test_import_paths.py  test_inference_import_m4.py  (+49 more)
(+233 files in other folders)
