[project]
name = "motac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OJWatson", email = "oj.watson@hotmail.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
motac = "motac.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
