[project]
name = "motac"
version = "0.1.0"
description = "Road-constrained spatio-temporal Hawkes processes for event forecasting on road networks."
readme = "README.md"
authors = [
    { name = "OJWatson", email = "oj.watson@hotmail.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.2",
    "osmnx>=1.9",
    "pyarrow>=15",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8",
    "ruff>=0.6",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=1.24",
    "sphinxcontrib-bibtex>=2.6",
]

[project.urls]
Homepage = "https://github.com/OJWatson/motac"
Documentation = "https://ojwatson.github.io/motac"
Repository = "https://github.com/OJWatson/motac"
"Bug Tracker" = "https://github.com/OJWatson/motac/issues"

[project.scripts]
motac = "motac.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=1.24",
    "sphinxcontrib-bibtex>=2.6",
]
